# sc-predictions-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.test.yml  docker-compose.yml
.github/workflows/: rust.yml
auth/: Cargo.toml
auth/src/: lib.rs
db/: Cargo.toml
db/migrations/2020-07-21-204601_create_game_questions/: up.sql
db/migrations/2020-07-24-155825_game_questions_fk_not_null/: up.sql
db/migrations/2020-07-29-201556_change_session_id_to_text/: down.sql
db/migrations/2020-08-12-005746_create_rounds/: down.sql  up.sql
db/migrations/2020-08-12-202553_add_locked_to_rounds/: up.sql
db/migrations/2020-08-23-181426_create_user_questions/: down.sql  up.sql
db/migrations/2020-09-27-230223_add_finished_to_rounds/: down.sql  up.sql
db/migrations/2020-10-10-032343_remove_game_locked/: down.sql  up.sql
db/src/: lib.rs  schema.rs
db/src/models/: game.rs  game_question.rs  mod.rs  question.rs  round.rs  user.rs  user_question.rs
db/src/utils/: mod.rs
errors/: Cargo.toml
errors/src/: lib.rs
migrations/: 0001.create_questions.up.sql  0001.initial_db.up.sql  0003.games.up.sql  0004.create_game_questions.up.sql  0005.create_users.up.sql  0006.add_score_to_users.down.sql  0006.add_score_to_users.up.sql
migrations/2018-10-18-024817_create_questions/: down.sql  up.sql
migrations/2020-07-21-204547_create_questions/: up.sql
migrations/2020-07-21-204555_create_games/: up.sql
migrations/2020-07-21-204601_create_game_questions/: down.sql
migrations/2020-07-21-204604_create_users/: up.sql
migrations/2020-07-24-155825_game_questions_fk_not_null/: down.sql
migrations/2020-07-29-201556_change_session_id_to_text/: up.sql
migrations/2020-07-30-140508_change_game_creator_to_text/: down.sql  up.sql
migrations/2020-08-12-202553_add_locked_to_rounds/: down.sql
scripts/: test-down.sh  test-prepare.sh  test-up.sh  test.sh
seeds/: 0001.questions.sql  Cargo.toml
seeds/src/: main.rs
server/: Cargo.toml
server/src/: main.rs  validate.rs  websocket.rs
server/src/handlers/: get_game_status.rs  get_round_details.rs  get_round_picks.rs  get_round_status.rs  mod.rs
server/src/middleware/: auth.rs
server/src/routes/: mod.rs
server/src/routes/games/: create.rs  get_players.rs  join.rs  status.rs
server/src/routes/questions/: get_all.rs  mod.rs
server/src/routes/rounds/: create.rs  get_round_picks.rs  lock_round.rs  mod.rs  save_picks.rs  score_round.rs  status.rs
server/src/tests/: helpers.rs
server/src/websocket/: client_messages.rs  mod.rs  server.rs
src/: app.rs  auth.rs  auth_users.rs  errors.rs  main.rs  schema.rs  validate.rs
src/db/: mod.rs  models.rs  pool.rs
src/db/models/: game.rs  game_question.rs  mod.rs  question.rs  round.rs  user.rs  user_question.rs
src/middleware/: auth.rs  mod.rs
src/routes/: mod.rs
src/routes/games/: create.rs  get_players.rs  join.rs  mod.rs  status.rs
src/routes/questions/: get_all.rs
src/routes/rounds/: create.rs  mod.rs  save_picks.rs  status.rs
src/tests/: helpers.rs
src/utils/: mod.rs
