[package]
name = "sc-predictions-server"
version = "0.1.0"
authors = ["Aaron McLeod <aaron.g.mcleod@gmail.com>"]

[dependencies]
actix-web = "0.7.12"
env_logger = "0.5.13"
diesel = { version = "1.0.0", features = ["postgres", "chrono"] }
dotenv = "0.9.0"
serde = "1.0.80"
serde_derive = "1.0.80"
chrono = { versiob = "0.4.6", features = ["serde"] }