[package]
name = "sc-predictions-server"
version = "0.1.0"
authors = ["Aaron McLeod <aaron.g.mcleod@gmail.com>"]
edition = "2018"

[dependencies]
actix-cors = "0.2"
actix-web = "2.0"
actix-rt = "1.0"
chrono = { versiob = "0.4.6", features = ["serde"] }
derive_more = "0.99.9"
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "uuid", "chrono"] }
dotenv = "0.9.0"
env_logger = "0.5.13"
futures = "0.1"
log = "0.4.0"
radix = "0.4.1"
rand = "0.6.1"
r2d2 = "0.8.2"
r2d2_postgres = "0.14.0"
serde = "1.0.80"
serde_json = "1.0.13"
serde_derive = "1.0.80"
uuid = { version = "0.5", features = ["serde"] }
validator = "0.8.0"
validator_derive = "0.8.0"