[package]
name = "auth"
version = "0.1.0"
authors = ["Aaron McLeod <aaron.g.mcleod@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-identity = "0.2"
actix-web = "2.0"
chrono = { version = "0.4.6", features = ["serde"] }
errors = { path = "../errors" }
futures = "0.3.5"
futures-util = "0.3.5"
jsonwebtoken = "7.2.0"
serde = "1.0.80"
serde_derive = "1.0.80"